<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunwayFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chevron_droite"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:tint="#999C9C9C"
                app:srcCompat="@drawable/ic_chevron_left_solid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_dialog_snowtam"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_dialog_snowtam"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/aeroport_piste_nom"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/airport_track_name"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/linearLayout_aeroport"
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout_piste"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/airport_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/airport_time" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@android:color/transparent" />

                    <TextView
                        android:id="@+id/airport_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/airport_date" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/runway_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/airport_track_weather"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/runway_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/airport_track_condition"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/runway_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/airport_track_condition"
                    android:textSize="20sp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/chevron_gauche"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:tint="#999C9C9C"
                app:srcCompat="@drawable/ic_chevron_right_solid" />

        </LinearLayout>

    </ScrollView>



</FrameLayout>